[package]
name = "rust-url-short"
version = "0.1.0"
authors = ["Arthur Ribeiro <devarthurribeiro@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
